fix: more dark mode fixes

--- a/src/styles/md.css
+++ b/src/styles/md.css
@@ -62,11 +62,13 @@
     height: auto;
     border-radius: 8px;
   }
+
   code {
     padding: 2px 5px;
     background-color: rgb(var(--gray-light));
     border-radius: 2px;
   }
+
   pre {
     padding: 1.5em;
     border-radius: 8px;
@@ -170,5 +172,26 @@
 
   tbody > tr:last-of-type > * {
     border-bottom-style: none;
+  }
+
+  @media (prefers-color-scheme: dark) {
+    --accent: #9da5fa;
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      margin: 0 0 1rem 0;
+      color: #ffffff;
+    }
+
+    code {
+      padding: 2px 5px;
+      background-color: rgb(var(--gray-light));
+      color: rgb(var(--gray-dark));
+      border-radius: 2px;
+    }
   }
 }
